[package]
name = "rawenum"
version = "0.1.1"
edition = "2024"
authors = ["Roee Shoshani"]
description = "A procedural macro to generate from_* methods for enums based on their integer discriminants."
repository = "https://github.com/roeeshoshani/rawenum"
license = "Apache-2.0"
keywords = ["proc-macro", "enum", "raw", "integer", "conversion"]
categories = ["development-tools", "data-structures"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
